<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="72dp"
    android:background="@color/cardview_light_background"
    tools:context=".Cart">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler_view"
        android:layout_width="415dp"
        android:layout_height="476dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/productslist" />

    <EditText
        android:id="@+id/enter_promo_code"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="promoCode"
        android:hint="@string/promoCodeInputText"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/totalPriceText"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/btn_apply_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/applyCodeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_promo_code" />

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/totalCost"
        app:layout_constraintTop_toBottomOf="@+id/cart_recycler_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalPriceHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@id/cart_recycler_view"
        app:layout_constraintStart_toEndOf="@+id/totalPriceText" />


</androidx.constraintlayout.widget.ConstraintLayout>