<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/productIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/productimage"
                app:layout_constraintEnd_toStartOf="@+id/productTitle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/productPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/productIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginTop="5dp"
                android:text="@string/price"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/productTitle" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="33dp"
                android:layout_height="22dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/price"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/productIcon"
                app:layout_constraintTop_toBottomOf="@+id/productTitle" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="204dp"
                android:layout_marginTop="4dp"
                android:text="@string/rating"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/productIcon"
                app:layout_constraintTop_toBottomOf="@+id/productTitle" />

            <TextView
                android:id="@+id/productRating"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginTop="5dp"
                android:text="@string/rating"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/productTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>